# cmake-demo

./: CMakeLists.txt  README  README.md
cmake/: CodeCoverage.cmake  Toolchain-i386.cmake
doc/: Doxyfile.in
lib/math/: CMakeLists.txt
lib/math-extra/: CMakeLists.txt
lib/math-extra/include/: math-extra.h  version.h
lib/math-extra/lib/math-basic/: CMakeLists.txt
lib/math-extra/lib/math-basic/include/: math-basic.h
lib/math-extra/lib/math-basic/src/: math-basic.cpp
lib/math-extra/lib/math-basic/tests/: divide.cpp  multiply.cpp
lib/math-extra/src/: power.cpp
lib/math-extra/tests/: power.cpp
lib/math/include/: math.h
lib/math/src/: math.cpp
lib/math/tests/: divide.cpp  multiply.cpp
src/: main.cpp  math.cpp  math.h
tests/: gtest_example.cpp
tools/: check_style.sh  cpplint.py
